--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,15 +1,17 @@
 .formcontainer{
-    position: relative; 
-    left: 400px;
+    margin: auto;
 }
 
 form{
+    margin: auto;
+    border: 5px;
     width: fit-content; 
     padding: 40px;
     border-radius: 0px 10px;
     background-color: rgb(207, 200, 202);
 }
 div{
+    margin: auto;
     padding: 20px;
 }
 label{
@@ -17,10 +19,9 @@ label{
     font-weight: 400;
     font-family:  sans-serif;
     padding-right: 90px;
-
+    
 }
 
 input{
     border-radius: 7px 1px;
 }
-
